# ROX

./: CMakeLists.txt  Controller.cpp  Controller.h  License  Makefile  Makefile.app  Makefile.test  OpenFlow.h  README.md  main.cpp
NN/: BrainServer.py  CMakeLists.txt  FFNNSimulation-window-deep.py  FFNNSimulation-window.py  FFNNSimulation.py  NeuralNetwork.cpp  NeuralNetwork.h  TensorFlowRNN.py  brain.capnp  brain.capnp.cpp  brain.capnp.h  output-02062017.txt  output-perf-02062017.txt
NN/data-lstm-window-ex/: output-0.txt  output-1.txt  output-10.txt  output-11.txt  output-12.txt  output-13.txt  output-14.txt  output-15.txt  output-16.txt  output-17.txt  output-18.txt  output-19.txt  output-2.txt  output-3.txt  output-4.txt  output-5.txt  output-6.txt  output-7.txt  output-8.txt  output-9.txt  output-lstm-window-101.txt  output-lstm-window-102.txt  output-lstm-window-103.txt  output-lstm-window-104.txt  output-lstm-window-perf-101.txt  output-lstm-window-perf-102.txt  output-lstm-window-perf-103.txt  output-lstm-window-perf-104.txt  output-perf-0.txt  output-perf-1.txt  output-perf-10.txt  output-perf-11.txt  output-perf-12.txt  output-perf-13.txt  output-perf-14.txt  output-perf-15.txt  output-perf-16.txt  output-perf-17.txt  output-perf-18.txt  output-perf-19.txt  (+10 more)
NN/data-window/: output-0.txt  output-1.txt  output-10.txt  output-11.txt  output-12.txt  output-13.txt  output-14.txt  output-15.txt  output-16.txt  output-17.txt  output-18.txt  output-19.txt  output-2.txt  output-20.txt  output-21.txt  output-22.txt  output-23.txt  output-24.txt  output-25.txt  output-26.txt  output-27.txt  output-28.txt  output-29.txt  output-3.txt  output-30.txt  output-31.txt  output-32.txt  output-33.txt  output-34.txt  output-35.txt  output-36.txt  output-37.txt  output-38.txt  output-39.txt  output-4.txt  output-40.txt  output-41.txt  output-42.txt  output-43.txt  output-44.txt  (+146 more)
Network/: ArpTable.cpp  ArpTable.h  CMakeLists.txt  Endian.h  Ethernet.h  IpAddressV4.h  IpPacket.h  MacAddress.h  RouteTable.cpp  RouteTable.h
OpenFlow/: CMakeLists.txt  EnumTypes.h  OpenFlowTable.cpp  OpenFlowTable.h
OpenFlow/Messages/: CMakeLists.txt  FeaturesDecoder.cpp  FeaturesDecoder.h  FlowMatchDecoder.cpp  FlowMatchDecoder.h  FlowMatchEncoder.cpp  FlowMatchEncoder.h  FlowModActionEncoder.cpp  FlowModActionEncoder.h  FlowModEncoder.cpp  FlowModEncoder.h  FlowModInstructionEncoder.cpp  FlowModInstructionEncoder.h  FlowRemovedDecoder.cpp  FlowRemovedDecoder.h  HeaderDecoder.cpp  HeaderDecoder.h  HeaderEncoder.cpp  HeaderEncoder.h  HelloDecoder.cpp  HelloDecoder.h  MatchEncoder.h  OxmTLV.cpp  OxmTLV.h  PacketInDecoder.cpp  PacketInDecoder.h
System/: CMakeLists.txt  Error.h  IfInterface.h  IfInterfaceManager.h  IpAddressV4.h  LookupTree.cpp  LookupTree.h  crc32.h
gtest/: ArpTableTest.cpp  FlowTableTest.cpp  IpAddressTest.cpp  LookupTreeTest.cpp  Router.cpp  Test.cpp
scripts/: StcPython.py
